# lolcat

./: .gitignore  .goreleaser.yml  .travis.yml  Cargo.toml  LICENSE  README.md  lolcat.go
.rpm/: lolcat.spec
cmd/: lolcat.go
pkg/app/: app.go
pkg/cli/: input.pp.go
pkg/colorizer/: Colorizer.go  RGBColorizer.go  RainbowColorizer.go  RainbowColorizer_test.go
pkg/services/: ColorizerService.go
src/: lib.rs  main.rs
